event-source.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-webhook-event-source-svc
spec:
  ports:
  - port: 4321
    protocol: TCP
    targetPort: 4321
  selector:
    eventsource-name: my-event-source
  type: ClusterIP # NodePort
