argo-events-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-argo-events-ingress
  namespace: argo-events
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: argo.cortexshiftdev.team # myargoevents.<ingress-nginx-controller-external-ip>.nip.io
      http:
        paths:
          - path: /events(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: my-webhook-event-source-svc
                port:
                  number: 4321
  tls:
    - hosts:
        - argo.cortexshiftdev.team
      secretName: tls-cert-secret
